--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "Base64": "^1.0.0",
     "array.of": "^0.1.1",
     "audio-context-polyfill": "^1.0.0",
-    "babel-core": "^6.23.1",
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.1.18",
     "blocked": "^1.1.0",
     "cli-color": "^1.1.0",
@@ -67,7 +67,7 @@
     "dotenv": "^4.0.0",
     "event-source-polyfill": "^0.0.9",
     "exists-sync": "0.0.4",
-    "express": "^4.14.1",
+    "express": "^4.15.4",
     "fast-stats": "0.0.3",
     "from2-string": "^1.1.0",
     "glob": "^7.1.1",
@@ -77,48 +77,48 @@
     "html5shiv": "^3.7.3",
     "intersection-observer": "^0.2.1",
     "intl": "^1.2.5",
-    "js-polyfills": "^0.1.33",
+    "js-polyfills": "^0.1.34",
     "json3": "^3.3.2",
     "lazystream": "^1.0.0",
     "lodash": "^4.17.4",
     "lru-cache": "^4.0.2",
     "marked": "^0.3.6",
     "measured": "^1.0.0",
-    "merge2": "^1.0.3",
+    "merge2": "^1.2.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.0",
-    "mocha": "^3.2.0",
+    "mocha": "^3.5.3",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "mutationobserver-shim": "^0.3.2",
-    "mysql2": "^1.2.0",
+    "mysql2": "^1.4.2",
     "picturefill": "^3.0.1",
-    "proclaim": "^3.4.4",
+    "proclaim": "^3.4.6",
     "pump": "^1.0.2",
     "raven": "^0.12.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "semver": "^5.3.0",
+    "semver": "^5.4.1",
     "shrink-ray": "^0.1.3",
     "stream-from-promise": "^1.0.0",
     "stream-to-string": "^1.1.0",
     "string.fromcodepoint": "0.2.1",
     "tsort": "0.0.1",
     "uglify-js": "^2.7.5",
-    "useragent": "^2.1.12",
+    "useragent": "^2.2.1",
     "usertiming": "^0.1.8",
-    "web-animations-js": "^2.2.5",
+    "web-animations-js": "^2.3.1",
     "whatwg-fetch": "^2.0.3",
     "yaku": "0.17.11"
   },
   "devDependencies": {
     "browserstack-local": "^1.3.0",
     "eslint": "^3.11.1",
-    "fastly": "Financial-Times/fastly#v2.5.0",
+    "fastly": "github:Financial-Times/fastly#v2.5.0",
     "fastly-purge": "^1.0.1",
     "gaze": "^1.1.2",
     "mockery": "^1.7.0",
-    "node-fetch": "^1.6.0",
+    "node-fetch": "^1.7.3",
     "nyc": "^10.0.0",
     "sauce-tunnel": "^2.2.3",
     "sinon": "^1.17.6",
